diesel-builders/tests/ui/invalid_default_validation_error.stderr
error[E0080]: evaluation panicked: Compile-time validation failed for table `products`, column `stock`.
              Invalid default value: `-10`
              The default value does not pass ValidateColumn::validate_column().
              Please ensure the default value satisfies the validation constraints.
  --> tests/ui/invalid_default_validation_error.rs:42:29
   |
42 |     #[table_model(default = -10)]
   |                             ^^^ evaluation of `_validate_default_stock` failed here
